[package]
name = "Restarter"
version = "0.1.0"
authors = ["ouglaaa <ouglaaa@cave.ovh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ping = "0.2.0"
json = "0.12.4"
easy-http-request = "0.2.9"
#encrypt = "0.1.3"
base64 = "0.13.0"
cryptostream = "0.3.1"
openssl = "0.10.30"
