[package]
name = "Restarter"
version = "0.1.0"
authors = ["ouglaaa <ouglaaa@cave.ovh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ping = "0.2.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
easy-http-request = "0.2.9"
base64 = "0.13.0"
cryptostream = "0.3.1"
openssl = "0.10.30"
paho-mqtt = "0.7.1"
futures = "0.3.6"
crossbeam = "0.7.3"
